# PapiKos

./: CMakeLists.txt  build.bat  papikos.c
include/: login.h  termui.h
src/: login.c  main.c  termui.c
